	
    o	The graphics window placement parameters on the GUI preferences
    	dialog were being ignored.

    o	The text field in a drop-down list (as used in GUI preferences
	for fonts) will now scroll horizontally when a user enters
	text that exceeds the display width.

    o	If Rterm is invoked as 'R', the status code (as passed to q())
	is now returned (rather than 0 or 1).



		CHANGES IN R VERSION 2.6.1


PACKAGE INSTALLATION

    o	Fortran code in packages is no longer compiled with -Wall, as
	this is not done on other platforms.


OTHERS

    o	The canvas used when plotting on a jpeg() or bmp() device with
	a transparent background (most often by copying from a screen
	device with the default transparent background) is now white
	and not grey.

    o	It seems file.access() can be unreliable both ways: that is it
	can also report that access is barred when it is not.
	(Seen on network file systems.)  So install.packages() to a
	single library no longer makes use of file.access() but checks
	directory creation instead: it is still possible that you can
	create a directory but not be allowed to create a .dll or .chm
	file, at least under Vista.

    o	When R_COMPLETION is set to FALSE, TAB is no longer ignored,
	but advances to the next tab stop in Rterm (the pre-2.5.0
	behaviour) and inserts a space in Rgui.


BUG FIXES

    o	Saving a plot to Postscript or PDF required the font database
	to have been initialized: this is now done if necessary.

    o	Very long file or pathnames could cause a crash if opened in
	the script editor. (PR#10402)



		CHANGES IN R VERSION 2.6.0

GUI CHANGES

    o	The console now handles cut and paste and mouse clicks in the
	input line in a more Windows standard way.  It also indicates
	insert and overwrite mode with different cursors.


FUNCTION CHANGES

    o	embedFonts() now accepts paths in 'GS_CMD' which contain spaces.

    o	The windows() device supports semi-transparent colours under